# BMI-CSHORE

./: Flowchart_AeoLiS.docx  LICENSE  README.md  Writeup_use_coupled_model.docx
build_bmi_cshore/: babel_cshore.toml
build_bmi_cshore/bmi_cshore_src/: CMakeLists.txt
build_bmi_cshore/bmi_cshore_src/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
build_bmi_cshore/bmi_cshore_src/bmicshore/: CMakeLists.txt  bmi_cshore_new.f90  bmi_main.f90
build_bmi_cshore/bmi_cshore_src/cshore/: CMakeLists.txt  cshore_helper.f90  cshore_helper_module.mod  cshore_new.f  main.f90  string_processing.f90
